--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
     border-radius: 6px;
     margin-bottom: 24px;
     min-height: 282px;
+    box-shadow: rgba(17, 17, 26, 0.05) 4px 8px 6px;
 }
 
 
@@ -105,6 +106,7 @@ h3.testimonial__card-title {
     padding: 24px 0 32px 32px;
     border-radius: 6px;
     min-height: 282px;
+    box-shadow: rgba(17, 17, 26, 0.05) 4px 8px 6px;
 }
 
 .testimonial__card_avatar-second {
@@ -122,6 +124,7 @@ h3.testimonial__card-title {
     padding: 24px 0 32px 32px;
     border-radius: 6px;
     min-height: 265px;
+    box-shadow: rgba(17, 17, 26, 0.05) 8px 16px 6px;
 }
 .testimonial__card-third .testimonial__card_avatar{
     background-image: url(./images/image-jeanette.jpg);
@@ -154,6 +157,7 @@ h3.testimonial__card-title {
     padding: 24px 0 32px 30px;
     border-radius: 6px;
     min-height: 265px;
+    box-shadow: rgba(17, 17, 26, 0.05) 4px 0px 8px;
 }
 .testimonial__card-forth .testimonial__card_avatar {
     background-image: url(./images/image-patrick.jpg);
@@ -171,6 +175,7 @@ h3.testimonial__card-title {
     padding: 24px 0 32px 32px;
     border-radius: 6px;
     min-height: 572px;
+    box-shadow: rgba(17, 17, 26, 0.05) 4px 8px 6px;
 }
 
 .testimonial__card-five .testimonial__card_avatar {
